pioneers (14.1-1~local1) UNRELEASED; urgency=low

  * Awaiting new upstream release.
  * Switched to simple debhelper script.
  * Enabled hardening. (closes: #657829)
  * Added large icons for the GNOME3 desktop.
  * Fixed duplicate-short-description lintian warning for the data packages.
  * Removed Conflicts: en Replaces: for pre-oldstable versions to remove the
    last lintian warnings.

 -- Roland Clobus <rclobus@rclobus.nl>  Tue, 31 Jan 2012 09:39:56 +0100

pioneers (0.12.5-1) unstable; urgency=low

  * New upstream release.
  * Added libnotify support.
  * Fix for placing pirate when the rules do not support pirates.
    (closes: #643994)
  * Fix for assert after winning with road building card (LP:#767435)
  * Added -Wl,--as-needed for the Debian build.

 -- Roland Clobus <rclobus@rclobus.nl>  Sun, 30 Oct 2011 15:31:18 +0100

pioneers (0.12.4-1) unstable; urgency=low

  * New upstream release.
  * Added Avahi support.
  * Numbers on the board are visible again. (closes: #574549) (LP:#530988)
  * Add Danish debconf translation. (closes: #633905)
  * Fix for lintian warning: debian-rules-missing-recommended-target

 -- Roland Clobus <rclobus@rclobus.nl>  Thu, 18 Aug 2011 17:00:00 +0200

pioneers (0.12.3-2) unstable; urgency=low

  [ Roland Clobus ]
  * Update release-checklist for svn repository.
  * Refer to pioneers-meta-server instead of pioneers-console in the init
    scripts.
  * Fix meta-server pidfile issue again. (closes: #567994) 
  * Fix bug number in changelog 'Link to all gtk libraries'. (closes: #556063)
    Bug already closed by an e-mail to 556063-done@bugs.debian.org
  * Fix lintian error init.d-script-missing-dependency-on_remote_fs.
  * Fixed typo in Dutch translation.
  * Added British translation.
  * Recoded German translation to UTF-8.

  [ Bas Wijnen ]
  * Reinserted previously lost changelog entry for NMU 0.11.2-2+lenny1.
  * Add conflicts to old pioneers-console to make upgrade work.
    (closes: #567314)