@@ -7,6 +7,8 @@ pioneers (14.1-1~local1) UNRELEASED; urgency=low
   * Fixed duplicate-short-description lintian warning for the data packages.
   * Removed Conflicts: en Replaces: for pre-oldstable versions to remove the
     last lintian warnings.
+  * Use rsvg-convert instead of rsvg, together with netpbm to render the xpm
+    icons. ImageMagick is not needed anymore as build dependency.
 
  -- Roland Clobus <rclobus@rclobus.nl>  Tue, 31 Jan 2012 09:39:56 +0100
 
